service-tracker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: servicetracker
  namespace: hackfest
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: servicetracker.brianredmond.io
    http:
      paths:
      - path: /
        backend:
          serviceName: service-tracker-ui
          servicePort: 8080
