simple-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nginx.brianredmond.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
